<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="12dp"
    android:padding="12dp"
    tools:context=".view.MainActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

        <EditText
            android:id="@+id/edit_text_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/texto_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/edit_text_2"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            />
        <EditText
            android:id="@id/edit_text_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/texto_2"
            app:layout_constraintStart_toEndOf="@id/edit_text_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            />
    <Button
        android:id="@+id/compare_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comparar"
        app:layout_constraintTop_toBottomOf="@id/edit_text_1"
        app:layout_constraintEnd_toEndOf="parent"
        >

    </Button>
    <TextView
        android:id="@+id/text_view_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/empty"
        app:layout_constraintTop_toBottomOf="@id/compare_button"
        />


</androidx.constraintlayout.widget.ConstraintLayout>